[package]
name = "iced_core"
version = "0.2.1"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "The essential concepts of Iced"
license = "MIT"
repository = "https://github.com/hecrj/iced"

[dependencies]
# f32::powf, hypot, and ceil are in std, but not core
# Tracking issue: https://github.com/rust-lang/rust/issues/50145
libm = "0.2"

[dependencies.palette]
version = "0.5.0"
optional = true
